@@ -1073,13 +1073,12 @@ static Image *ReadWPGImage(const ImageInfo *image_info,
                     }
                 }      
 
-              if(UnpackWPGRaster(image,bpp) < 0)
-                /* The raster cannot be unpacked */
-                {
+			  if(!image_info->ping)
+                if(UnpackWPGRaster(image,bpp) < 0)                
+                {		/* The raster cannot be unpacked */
                 DecompressionFailed:
-                  ThrowReaderException(CoderError,UnableToDecompressImage,
-                                       image)
-                    }
+                  ThrowReaderException(CoderError,UnableToDecompressImage,image)
+                }
 
               if(Rec.RecType==0x14 && BitmapHeader2.RotAngle!=0 && !image_info->ping)
                 {  
